# axum_quickstart

./: AGENTS.md  API design.md  Cargo.toml  README.md  Taskfile.yaml  compose.yaml  example.env
.scripts/: PostgreSQL.ps1  Taskfile.yaml  queries.sql
api_client/: auth.http  healtch_check.http  health_check.http  http-client.env.json  users.http
api_http/: Cargo.toml
api_http/src/: content.rs  enums.rs  errors.rs  lib.rs  middlewares.rs  response.rs  responses.rs  state.rs
api_http/src/auth/: mod.rs
api_http/src/auth/login/: handler.rs  mod.rs  request.rs  response.rs  router.rs
api_http/src/auth/logout/: handler.rs  response.rs  router.rs
api_http/src/auth/refresh/: handler.rs  response.rs  router.rs
api_http/src/auth/register/: handler.rs  request.rs  response.rs  router.rs
api_http/src/docs/: mod.rs  openapi.rs  schemas.rs
api_http/src/docs/auth/: login.rs  logout.rs  mod.rs  refresh.rs  register.rs
api_http/src/docs/health_check/: check.rs
api_http/src/docs/users/: register.rs  search.rs
api_http/src/handlers/: health_check.rs  mod.rs  users.rs
api_http/src/health_check/: health_check_handler.rs  mod.rs
api_http/src/health_check/check/: handler.rs  mod.rs  response.rs  router.rs
api_http/src/middlewares/: mod.rs  request_id.rs
api_http/src/schemas/responses/: errors.rs  helpers.rs  mod.rs  users.rs
api_http/src/users/: mod.rs  register_handler.rs  register_response.rs
api_http/src/users/get/: handler.rs  response.rs  router.rs
api_http/src/users/register/: handler.rs  request.rs  response.rs  router.rs
api_http/src/users/search/: handler.rs  mod.rs  request.rs  response.rs  router.rs
app/: Cargo.toml
app/src/: main.rs
app_config/: Cargo.toml
app_config/src/: lib.rs
application/: Cargo.toml
application/src/: errors.rs  lib.rs
application/src/auth/: mod.rs  password_hasher_port.rs  token_blacklist.rs  token_blacklist_port.rs  token_manager.rs  token_manager_port.rs
application/src/auth/login/: inbound.rs  mod.rs  result.rs  service.rs
application/src/auth/logout/: inbound.rs  mod.rs  service.rs
application/src/auth/refresh/: inbound.rs  result.rs  service.rs  use_case.rs
application/src/auth/register/: inbound.rs  result.rs  service.rs
application/src/auth/verify_access_token/: service.rs  use_case.rs
application/src/authorization/: access_role.rs  action.rs  enforcer_port.rs  mod.rs  policy.rs  repository_port.rs  resource.rs  result.rs  service.rs  use_case.rs
application/src/authorization/policy_lifecycle/: service.rs  use_case.rs
application/src/authorization/policy_management/: service.rs  use_case.rs
application/src/ports/inbound/: register_user.rs
application/src/ports/outbound/: mod.rs  password_hasher.rs
application/src/rate_limit/: mod.rs  policy.rs  rate_limiter_port.rs
application/src/search/: mod.rs  query.rs  repository.rs  result.rs  service.rs  use_case.rs
application/src/services/: health_check.rs  mod.rs  register_user.rs
application/src/system/health_check/: inbound.rs  mod.rs  outbound.rs  port.rs  result.rs  service.rs
application/src/users/: mod.rs  user_repository.rs  user_repository_port.rs
application/src/users/get/: inbound.rs  result.rs  service.rs  use_case.rs
application/src/users/register/: inbound.rs  mod.rs  result.rs  service.rs
application/src/users/search/: mod.rs  query.rs  result.rs
application/src/users/shared/: mod.rs  user_repository.rs
bootstrap/: Cargo.toml
bootstrap/src/: container.rs  main.rs
bootstrap/src/wiring/: app.rs  auth.rs  authorization.rs  mod.rs  system.rs  users.rs
docs/: authorization.md  workspace-structure.md
domain/: Cargo.toml
domain/src/: errors.rs  lib.rs
domain/src/entities/user/: mod.rs  provider.rs  user.rs
domain/src/user/: email.rs  mod.rs  password_hash.rs  phone.rs  plain_password.rs  provider.rs  raw_password.rs  status.rs  user.rs
infrastructure/: Cargo.toml
infrastructure/casbin/: model.conf
infrastructure/migrations/: Cargo.toml  Taskfile.yaml
infrastructure/migrations/src/: lib.rs  m20260325_000001_create_table.rs  m20260325_000001_create_users.rs  m20260412_000001_create_wishlists.rs  m20260412_000002_create_users_wishlists.rs  main.rs
infrastructure/migrations/tests/: migration_flow.rs
infrastructure/src/: lib.rs  settings.rs
infrastructure/src/adapters/: mod.rs
infrastructure/src/adapters/authorization/: casbin_enforcer.rs
infrastructure/src/adapters/cache/: mod.rs  redis_rate_limiter.rs  redis_token_blacklist.rs
infrastructure/src/adapters/health/: combined_health_check.rs  database_health_check.rs  mod.rs  redis_health_check.rs
infrastructure/src/adapters/persistence/: mod.rs  seaorm_connection.rs  seaorm_user_repository.rs  search.rs  user_repository.rs
infrastructure/src/adapters/persistence/seaorm/: mod.rs
infrastructure/src/adapters/persistence/seaorm/entities/: mod.rs  prelude.rs  sea_orm_active_enums.rs  users.rs  users_wishlists.rs  wishlists.rs
infrastructure/src/adapters/persistence/seaorm/mappers/: user.rs
infrastructure/src/adapters/persistence/seaorm/user_search/: conditions.rs  cursor.rs  mod.rs  result.rs  values.rs
infrastructure/src/adapters/redis/: client.rs  mod.rs  policy_store.rs  rate_limiter.rs  token_blacklist.rs
infrastructure/src/adapters/security/: argon_password_hasher.rs  jwt_token_manager.rs  mod.rs  password_hasher.rs
infrastructure/src/crypto/: password.rs
infrastructure/src/db/: connection.rs  health_check.rs
infrastructure/src/orm/entities/: users.rs  users_wishlists.rs  wishlists.rs
infrastructure/src/orm/mappers/: user.rs
infrastructure/src/repositories/: health_check.rs  user.rs
infrastructure/src/seaorm/: mod.rs
infrastructure/src/seaorm/mappers/: user.rs
infrastructure/src/seaorm/models/: user.rs
service/: Cargo.toml
service/src/: errors.rs  lib.rs
service/src/ports/: health_check.rs  mod.rs  user.rs
service/src/services/: health_check.rs  register_user.rs
service/src/use_cases/: health_check.rs  register_user.rs
