[workspace]
members = ["app_config", "bootstrap", "api_http", "domain", "infrastructure", "application", "infrastructure/migrations"]
resolver = "2"
default-members = ["bootstrap"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.92.0"
authors = [
    "Kostiantyn Salnykov <kostiantyn.salnykov@gmail.com>",
]
description = "Axum based project with hexagonal|clean architecture."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Kostiantyn-Salnykov/axum_quickstart"
homepage = "https://github.com/Kostiantyn-Salnykov/axum_quickstart"
documentation = "https://github.com/Kostiantyn-Salnykov/axum_quickstart"
keywords = ["axum", "http", "api", "web", "backend"]
categories = ["web-programming"]
publish = false

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
chrono = "0.4.44"
serde = "1.0.228"
thiserror = "2.0.18"
tokio = "1"
tracing = "0.1.44"
uuid = "1.22.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.test]
opt-level = 0

[profile.bench]
lto = "thin"
