[package]
name = "api_http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true, features = ["tracing", "tokio", "tower-log"] }
serde = { workspace = true, features = ["derive"] }
application = { path = "../application" }
thiserror.workspace = true
anyhow.workspace = true
tower-http = { version = "0.6.8", features = ["trace", "request-id", "util", "uuid"] }
uuid = { workspace = true, features = ["v4", "v7", "v8", "serde"] }
tower = { version = "0.5.3", features = [] }
tracing.workspace = true
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
