[package]
name = "app_config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
config = "0.15.22"
dotenvy = "0.15.7"
serde = { workspace = true, features = ["derive"] }
