[package]
name = "application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
domain = {path = "../domain"}
async-trait.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["v4"] }
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
