[package]
name = "bootstrap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
app_config = { path = "../app_config" }
api_http = { path = "../api_http"}
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
tokio = { workspace = true, features = ["full"] }
axum.workspace = true
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing.workspace = true
sea-orm = "2.0.0-rc"
