[package]
name = "domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
thiserror.workspace = true
chrono.workspace = true
uuid = { workspace = true, features = ["v4", "v7", "v8"] }
email_address = "0.2.9"
phonenumber = "0.3"
