[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = {path = "../domain"}
application = {path = "../application"}
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "debug-print", "with-uuid", "with-json", "with-chrono", "with-bigdecimal", "macros" ] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
envy = "0.4.2"
async-trait = "0.1.89"
argon2 = "0.6.0-rc.8"
uuid = { version = "1.22.0", features = ["v4"] }
chrono = "0.4.44"
tracing = "0.1.44"
