[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
domain = {path = "../domain"}
application = {path = "../application"}
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "debug-print", "with-uuid", "with-json", "with-chrono", "with-bigdecimal", "macros" ] }
serde = { workspace = true, features = ["derive"] }
async-trait.workspace = true
argon2 = "0.6.0-rc.8"
uuid = { workspace = true, features = ["v4"] }
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
redis = { version = "1.2.0", features = ["tokio-comp", "uuid", "json", "connection-manager"] }
sha2 = "0.11.0"
