[package]
name = "migrations"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migrations"
path = "src/lib.rs"

[dependencies]
infrastructure = { path = ".." }
sea-orm-migration = { version = "2.0.0-rc.37", features = ["runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-uuid", "with-rust_decimal", "with-json", "dotenvy"] }
tokio = { version = "1", features = ["full"] }
